# twittermp

./: .gitignore  README.md
OneDrive/Documentos/Desenvolvedor Full stack phyton/EBAC MOTORS/: index.html  main.css
OneDrive/Documentos/Desenvolvedor Full stack phyton/EBAC MOTORS/js/: main.js
OneDrive/Documentos/Desenvolvedor/twitermp/: pyproject.toml
OneDrive/Documentos/Desenvolvedor/twitermp/env/: pyvenv.cfg
OneDrive/Documentos/Desenvolvedor/twitermp/env/Scripts/: activate  activate.bat
OneDrive/Documentos/Desenvolvedor/twitermp/twitter_back/: README.md
public/: index.html
src/pages/Entry/: index.tsx
src/services/: api.ts
twitter_back/: settings.py
