[project]
name = "twitermp"
version = "0.1.0"
description = ""
authors = [
    {name = "MichelPianaro",email = "teconhecer27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gitpython (>=3.1.44,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
